--- a/live-tweets-analyzer/package.json
+++ b/live-tweets-analyzer/package.json
@@ -39,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@mui/material": "^5.13.3",
+    "tailwindcss": "^3.3.2"
   }
 }
