--- a/live-tweets-analyzer/package.json
+++ b/live-tweets-analyzer/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fake-tweet": "^1.0.7",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
@@ -41,7 +42,10 @@
     ]
   },
   "devDependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.3",
+    "fake-tweet": "^1.0.2",
     "tailwindcss": "^3.3.2"
   }
 }
