--- a/live-tweets-analyzer/package.json
+++ b/live-tweets-analyzer/package.json
@@ -18,7 +18,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "WATCHPACK_POLLING=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -44,8 +44,11 @@
   "devDependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
     "fake-tweet": "^1.0.2",
-    "tailwindcss": "^3.3.2"
+    "font-awesome": "^4.7.0",
+    "tailwindcss": "^3.3.2",
+    "usehooks-ts": "^2.9.1"
   }
 }
